Sito/style/base.css
@import url('https://fonts.googleapis.com/css2?family=Baloo+Bhaijaan+2:wght@400;500&family=Roboto+Mono:wght@100;300&display=swap');
/* Option 2: Import via CSS */
@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css");

@keyframes shake {
    10%, 90% {
        transform: translate3d(-1px, 0, 0);
    }

    20%, 80% {
        transform: translate3d(2px, 0, 0);
    }

    30%, 50%, 70% {
        transform: translate3d(-4px, 0, 0);
    }

    40%, 60% {
        transform: translate3d(4px, 0, 0);
    }
}

@keyframes cartMovement {
    0% {
        transform: scale(1,1) rotate3d(1,1,1,0);
    }
    50% {
        transform: scale(1.2,1.2) translate(-5px,-8px) rotate3d(1,1,1,30deg);
    }
    100% {
        transform: scale(1,1) rotate3d(1,1,1,0);
    }
}

@keyframes searchMovement {
    0% {
        transform: scale(1,1);
    }
    50% {
        transform: scale(1.4,1.4);
    }
    100% {
        transform: scale(1,1);
    }
}

@keyframes profileSpinMovement {
    0% {
        transform: rotate(0deg) scale(1,1);
    }

    50% {
        transform: rotate(180deg) scale(1.2,1.2);
    }

    100% {
        transform: rotate(360deg) scale(1,1);
    }
}

@keyframes bellRingSpinMovement {
    0% {
        animation-timing-function: ease-in;
        transform: rotate(0deg) scale(1, 1);
    }
    50% {
        transform: rotate(45deg) scale(1.2, 1.2);
    }
    100% {
        animation-timing-function: ease-out;
        transform: rotate(0deg) scale(1, 1);
    }
}

body {
    font-family: 'Roboto Mono', monospace;
    box-sizing: border-box;
}

/* Works on Firefox */
* {
    scrollbar-width: auto;
    scrollbar-color: grey white;
    scrollbar-highlight-color: grey;
    scroll-behavior: smooth;
}

/* Works on Chrome, Edge, and Safari */
*::-webkit-scrollbar {
    width: 12px;
}

*::-webkit-scrollbar-track {
    background: white;
}

*::-webkit-scrollbar-thumb {
    background-color: grey;
    border-radius: 20px;
    border: 3px solid grey;
}

nav > ul li:nth-child(1):hover img{
    animation: shake 0.82s cubic-bezier(.36,.07,.19,.97) both;
}


nav > ul li:nth-child(2):hover img{
    animation: cartMovement 0.5s ease-out;
}

nav > ul li:nth-child(3):hover img{
    animation: searchMovement 0.5s ease-out;
}

nav > ul li:nth-child(4):hover img{
    animation: profileSpinMovement 0.22s 2 linear;
}

nav > ul li:nth-child(5):hover img{
    animation: bellRingSpinMovement 0.2s 3 ease-in;
}

nav > ul li a:hover {
    text-decoration: none;
}

nav{
    z-index: 9999999 !important;
}

header > div {
    background-color: Gainsboro;
    padding: 10px 0 10px 40px;
    width: 100%;
}

body > div > div:nth-child(2){
    margin-bottom: 0px;
    padding-bottom: 0px;
    background-color: #E0E0E0;
}

body main{
    padding: 10px 0;
}

header {
    width: 100%;
}

header > div > div{
    margin: auto;
}

header > div > div img {
    width: 100%;
}

header > div > div:nth-child(3) {
    text-align: right;
}

header > div > div:nth-child(2) {
    text-align: left;
}

header > div > div:nth-child(2) > p {
    font-size: 12px;
    line-height: 12px !important;

}

header > div:nth-child(1) > div:nth-child(1){
    float: left;
    width: 70%;
}

body > div > div > div > form > label {
    display: none;
}

header > div > div > h2 {
    color: black;
    text-align: left;
    font-size: 8px !important;
}

header > div:nth-child(1) >  div:nth-child(2){
    float: right;
    width: 30%;
    height: 100%;
    text-align: left;
    line-height: 56px;
}

header > div:nth-child(1) > div:nth-child(2) > label > a{
    text-decoration: underline;
    color: black;
    font-weight: bold;
}

body nav {
    width: 100%;
    position: fixed;
    bottom: 0;
    padding: 0 !important;
    z-index:99999;
}

body nav > ul {
    list-style: none;
    margin-bottom: 0;
    background-color: #E0E0E0;;
    padding: 0 !important;
}

body nav > ul > li {
    width: 20%;
    text-align: center;
    display: inline-block;
}

body nav > ul > li > a {
    display: block;
    width: 100%;
    height: 100%;
    padding: 10px 0;
    text-decoration: none;
}

nav > ul > li > a > p {
    display: none;
}

nav > ul > li > a > img {
    width: 30%;
}

body > div > div:nth-child(3) > div > form {
    margin: 0 0 0 20% !important;
    position: fixed;
    height: 7%;
    width: 60%;
    bottom: 10.5%;
    background-color: #E0E0E0;
    z-index: 99;
    padding-right: 0 !important;
}

body > div > div:nth-child(3) > div > form > input, body > div > div:nth-child(3) > div > form > button {
    height: 100%;
    border: 1px solid black;
    font-weight: bolder;
    text-align: center;
}

body > div > div:nth-child(3) > div > form > input[type=text] {
    width: 80%;
    float: left;
    font-size: 11px;
}

body > div > div:nth-child(3) > div > form > input[type=submit] {
    width: 20%;
    float: right;
    font-size: 18px;
    border-left: none;
}


body > div > div:nth-child(3) > div > form > input[type=submit]:hover {
    background-color: black;
    color: white;
}

@media (prefers-reduced-motion) {
    * {
        animation: none;
    }
}

/* Regole per la visualizzazione Desktop-Mode*/
/* Se il dispositivo ha una larghezza minima di 768px applico le seguenti regole*/
@media (min-width: 768px) {

    header > div > div{
        margin: auto;
    }

    header > div > div img {
        width: 70%;
    }

    header > div > div:nth-child(2) > p {
        font-size: 20px !important;
        line-height: 20px !important;

    }

    body nav {
        position: static;
        margin-bottom: 10px;
        position: relative;
        z-index: 9999999 !important;
    }

    body nav > ul > li:not(:last-child) {
        border-right: 1px solid #E0E0E0;
    }

    body nav ul li a img {
        width: 10%;
    }

    header > div > div:nth-child(2) > p {
        line-height: 40px;
    }

    body header {
        margin: 0;
    }

    body > div > div:nth-child(3) > div > form {
        padding: 0;
        position: static;
        background-color: #f1f1f1;
        height: 40px;
    }


    body nav > ul > li > a > p {
        font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
        display: inline;
        margin-left: 20px;
        color: black;
        font-weight: bold;
    }


}

